// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`json parser invalid fixtures parses characters.json 1`] = `
Object {
  "data": Object {
    "valid-escape": "\\\\n",
    "valid-unicode": "ż",
  },
  "pointers": Object {
    "": Object {
      "end": Object {
        "line": 7,
      },
      "start": Object {
        "line": 1,
      },
    },
    "/valid-escape": Object {
      "end": Object {
        "line": 3,
      },
      "start": Object {
        "line": 3,
      },
    },
    "/valid-unicode": Object {
      "end": Object {
        "line": 2,
      },
      "start": Object {
        "line": 2,
      },
    },
  },
  "validations": Array [
    Object {
      "errorCode": 1,
      "length": 6,
      "location": Object {
        "end": Object {
          "column": 20,
          "line": 4,
        },
        "start": Object {
          "column": 14,
          "line": 4,
        },
      },
      "name": "InvalidSymbol",
      "offset": 69,
      "severity": 50,
      "severityLabel": "error",
    },
    Object {
      "errorCode": 12,
      "length": 2,
      "location": Object {
        "end": Object {
          "column": 22,
          "line": 4,
        },
        "start": Object {
          "column": 20,
          "line": 4,
        },
      },
      "name": "UnexpectedEndOfString",
      "offset": 75,
      "severity": 50,
      "severityLabel": "error",
    },
    Object {
      "errorCode": 5,
      "length": 2,
      "location": Object {
        "end": Object {
          "column": 22,
          "line": 4,
        },
        "start": Object {
          "column": 20,
          "line": 4,
        },
      },
      "name": "ColonExpected",
      "offset": 75,
      "severity": 50,
      "severityLabel": "error",
    },
    Object {
      "errorCode": 15,
      "length": 4,
      "location": Object {
        "end": Object {
          "column": 25,
          "line": 5,
        },
        "start": Object {
          "column": 21,
          "line": 5,
        },
      },
      "name": "InvalidEscapeCharacter",
      "offset": 98,
      "severity": 50,
      "severityLabel": "error",
    },
  ],
}
`;

exports[`json parser invalid fixtures parses schema.json 1`] = `
Object {
  "data": Object {
    "address": Object {},
    "hello": "world",
    "paths": Object {
      "/users/{id}": Object {
        "get": Object {
          "operationId": "get-user",
        },
      },
    },
  },
  "pointers": Object {
    "": Object {
      "end": Object {
        "line": 14,
      },
      "start": Object {
        "line": 1,
      },
    },
    "/address": Object {
      "end": Object {
        "line": 5,
      },
      "start": Object {
        "line": 3,
      },
    },
    "/hello": Object {
      "end": Object {
        "line": 2,
      },
      "start": Object {
        "line": 2,
      },
    },
    "/paths": Object {
      "end": Object {
        "line": 12,
      },
      "start": Object {
        "line": 6,
      },
    },
    "/paths/~1users~1{id}": Object {
      "end": Object {
        "line": 11,
      },
      "start": Object {
        "line": 7,
      },
    },
    "/paths/~1users~1{id}/get": Object {
      "end": Object {
        "line": 10,
      },
      "start": Object {
        "line": 8,
      },
    },
    "/paths/~1users~1{id}/get/operationId": Object {
      "end": Object {
        "line": 9,
      },
      "start": Object {
        "line": 9,
      },
    },
  },
  "validations": Array [
    Object {
      "errorCode": 4,
      "length": 1,
      "location": Object {
        "end": Object {
          "column": 4,
          "line": 5,
        },
        "start": Object {
          "column": 3,
          "line": 5,
        },
      },
      "name": "ValueExpected",
      "offset": 53,
      "severity": 50,
      "severityLabel": "error",
    },
    Object {
      "errorCode": 6,
      "length": 7,
      "location": Object {
        "end": Object {
          "column": 10,
          "line": 6,
        },
        "start": Object {
          "column": 3,
          "line": 6,
        },
      },
      "name": "CommaExpected",
      "offset": 57,
      "severity": 50,
      "severityLabel": "error",
    },
  ],
}
`;

exports[`json parser parse simple 1`] = `
Object {
  "data": Object {
    "address": Object {
      "street": 123,
    },
    "hello": "world",
    "paths": Object {
      "/users/{id}": Object {
        "get": Object {
          "operationId": "get-user",
        },
      },
    },
  },
  "pointers": Object {
    "": Object {
      "end": Object {
        "line": 13,
      },
      "start": Object {
        "line": 1,
      },
    },
    "/address": Object {
      "end": Object {
        "line": 5,
      },
      "start": Object {
        "line": 3,
      },
    },
    "/address/street": Object {
      "end": Object {
        "line": 4,
      },
      "start": Object {
        "line": 4,
      },
    },
    "/hello": Object {
      "end": Object {
        "line": 2,
      },
      "start": Object {
        "line": 2,
      },
    },
    "/paths": Object {
      "end": Object {
        "line": 12,
      },
      "start": Object {
        "line": 6,
      },
    },
    "/paths/~1users~1{id}": Object {
      "end": Object {
        "line": 11,
      },
      "start": Object {
        "line": 7,
      },
    },
    "/paths/~1users~1{id}/get": Object {
      "end": Object {
        "line": 10,
      },
      "start": Object {
        "line": 8,
      },
    },
    "/paths/~1users~1{id}/get/operationId": Object {
      "end": Object {
        "line": 9,
      },
      "start": Object {
        "line": 9,
      },
    },
  },
  "validations": Array [],
}
`;
